--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,5 @@
-otgenetics @ git+https://github.com/opentargets/genetics_etl_python@main
+numpy==1.24.2
+py4j==0.10.9.5
+pyspark==3.3.2
+scipy==1.10.1
+
